--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,31 @@ a {
   color: #252525;
 }
 
+.subHeader {
+  padding: 20px;
+  text-align: center;
+  background: grey;
+  color: white;
+  font-size: 30px;
+}
 .container {
   max-width: 1000px;
   margin: 0 auto;
   padding: 10px;
 }
 
+.subContainer {
+  margin: 0 auto;
+  border: 1px solid grey;
+  max-width: 600px;
+
+}
+
+.new-tweet {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
 .btn {
   text-transform: uppercase;
   margin: 35px auto;
@@ -58,18 +77,42 @@ a {
   padding-left: 0;
 }
 
-.nav UserInfo {
+.nav li:last-child
+{
+    float:right;
+}
+
+.nav li:logout {
   text-align:right
 }
 
-.nav logout {
-  text-align:right
+.mainContainer {
+  text-align: center
 }
 
 ul {
   padding-left: 0;
 }
 
+.login {
+  margin-left:auto;margin-right:auto
+}
+.dashboard-item {
+  list-style-position:inside;
+  border: 1px solid grey;
+  margin-top: 10px;
+  margin-left:10px;
+}
+
+.dashboard-list {
+  list-style-position:inside;
+  text-align: left;
+}
+
+ul .dashboard-list {
+  list-style-position:inside;
+
+}
 li {
   list-style-type: none;
   padding: 10px;
@@ -77,82 +120,43 @@ li {
 }
 
 .avatar {
-  height: 50px;
+  height: 35px;
+  border-radius: 25px;
+  margin: 10px;
+}
+.userInfo {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.questionInfo {
+  margin: 10px;
+  flex-direction: column;
+}
+
+.listAvatar {
+  height: 85px;
   border-radius: 25px;
   margin: 10px;
 }
 
-.tweet {
-  width: 100%;
-  max-width: 590px;
+.questionItem {
+  width: 80%;
+  display: flex;
+  margin: 0 auto;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.userItem {
+  width: 80%;
   padding: 10px;
   display: flex;
   margin: 0 auto;
   border: 1px solid #dad7d7;
   border-radius: 3px;
   cursor: pointer;
-}
-
-.tweet-info {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Hacky but less typing in the video */
-.tweet-info > div > span:first-child {
-  font-weight: bold;
-  margin-right: 5px;
-}
-.tweet-info > div > span:nth-child(2) {
-  color: #969696;
-  font-size: 16px;
-}
-.tweet-info > div > div {
-  color: #969696;
-  font-size: 15px;
-}
-.tweet-info > div > p {
-  font-size: 18px;
-  margin: 10px 0;
-}
-.tweet-icons {
-  display: flex;
-  align-items: center;
-}
-.tweet-icons > span {
-  color: #969696;
-  margin: 0 15px 0 5px;
-  font-size: 18px !important;
-}
-.tweet-icon {
-  font-size: 27px;
-  color: #697784;
-}
-.tweet-icon:hover {
-  color: #00b5d6;
-  cursor: pointer;
-}
-.replying-to {
-  border: none;
-  background: transparent;
-  margin: 0;
-  padding: 0;
-  color: #969696;
-  cursor: pointer;
-}
-
-.heart-button {
-  background: transparent;
-  border: none;
-}
-
-.new-tweet {
-  width: 100%;
-  max-width: 590px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
 }
 
 .textarea {
@@ -162,11 +166,8 @@ li {
   font-size: 15px;
   height: 10px;
   width:50%;
-}
-
-.tweet-length {
-  text-align: right;
-  margin-top: 10px;
-  font-size: 20px;
-  color: #C3392A;
+  float:center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
