--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,6 @@ a {
 
 }
 
-.new-tweet {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
 .btn {
   text-transform: uppercase;
   margin: 35px auto;
@@ -82,8 +77,9 @@ a {
     float:right;
 }
 
-.nav li:logout {
-  text-align:right
+.logout {
+  text-align:right;
+  text-decoration: underline
 }
 
 .mainContainer {
@@ -142,11 +138,26 @@ li {
 }
 
 .questionItem {
-  width: 80%;
+  width: 90%;
   display: flex;
   margin: 0 auto;
   border-radius: 3px;
   cursor: pointer;
+}
+
+.yourChoice{
+  background-color: yellow
+}
+.questionInnerItem {
+  text-align: left;
+  width: 100%
+}
+
+.option {
+  padding: 10px;
+  margin: 0 auto;
+  width : 400px;
+  border: 1px solid #dad7d7;
 }
 
 .userItem {
